--- a/PoC.Calendar.WASM/Client/Shared/Components/Scheduler.razor
+++ b/PoC.Calendar.WASM/Client/Shared/Components/Scheduler.razor
@@ -1,14 +1,20 @@
 ﻿@using PoC.Calendar.WASM.Shared
 
+Tjaba
 <div class="row">
     <div class="col-xl-12">
-        <RadzenScheduler @ref=@scheduler style="height: 768px;" TItem="Appointment" Data=@appointments StartProperty="Start" EndProperty="End"
+        <RadzenScheduler @ref=@scheduler style="height: 768px;" 
+                         TItem="Appointment" 
+                         Data=@Appointments 
+                         StartProperty="Start" 
+                         EndProperty="End"
                          TextProperty="Text" 
-                         SelectedIndex="1"
-                     
+                         SelectedIndex="1"                 
                          SlotSelect=@OnSlotSelect 
                          AppointmentSelect=@OnAppointmentSelect 
-                         AppointmentRender=@OnAppointmentRender>
+                         AppointmentRender=@OnAppointmentRender
+                         LoadData="@LoadData"
+                         >
             <RadzenDayView />
             <RadzenWeekView />
             <RadzenMonthView />
